--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "wp-scripts start",
     "build": "wp-scripts build",
     "build:fancy_text": "wp-scripts build src/BlockType/FancyText/src/editor.js src/BlockType/FancyText/src/front.js --output-path=src/BlockType/FancyText/build",
+    "build:nav_bar": "wp-scripts build src/BlockType/NavBar/src/editor.js --output-path=src/BlockType/NavBar/build",
     "check-engines": "wp-scripts check-engines",
     "check-licenses": "wp-scripts check-licenses",
     "format:js": "wp-scripts format-js",
